common-applications/test-environment/openeuler-new-feature/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: openeuler-new-feature
  name: openeuler-new-feature
