common-applications/test-environment/openeuler-new-feature/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: openeuler-new-feature
spec:
  ports:
  - name: https-port
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: website
  type: ClusterIP
