common-applications/test-environment/openeuler-new-feature/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: openeuler-feature-ingress
  namespace: openeuler-new-feature
spec:
  tls:
    - hosts:
      - openeuler-feature.test.osinfra.cn
      secretName: openeuler-feature-tls
  rules:
    - host: openeuler-feature.test.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: website-service
            servicePort: 80
          path: /
